tests/negative/MicroJuvix/NoPositivity/NegParam.juvix
module NegParam;
inductive T (A : Type) {
c : (A -> T A) -> T A;
};
end;
